--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Color Scheme Generator</title>
+</head>
+<body>
+    <nav>
+        <form id="form">
+            <input type="color" name="color" id="color">
+            <select name="colorValue" id="colorValue">
+                <option value="Monochrome">Monochrome</option>
+                <option value="Monochrome-dark">Monochrome-dark</option>
+                <option value="Monochrome-light">Monochrome-light</option>
+                <option value="Analogic">Analogic</option>
+                <option value="Complement">Complement</option>
+                <option value="Analogic-complement">Analogic-complement</option>
+                <option value="Triad">Triad</option>
+            </select>
+            <button id="submitColor" type="submit">Get Color scheme</button>
+        </form>
+        
+    </nav>
+    <div class="colorContainer" id="colorContainer">
+        <div class="colors" id="colorOne"></div>
+        <div class="colors" id="colorTwo"></div>
+        <div class="colors" id="colorThree"></div>
+        <div class="colors" id="colorFour"></div>
+        <div class="colors" id="colorFive"></div>
+        <div class="colors" id="colorSix"></div>
+    </div>
+    <script src="script.js"></script> 
+</body>
 
+</html>
